aligned minutes and seconds. Resolves #4.

--- a/styles/timer.css
+++ b/styles/timer.css
@@ -108,8 +108,8 @@ input[type='number'] {
 
 .clock span {
   font-size: 100px;
-  margin-right: -5px;
-  margin-left: -5px;
+  margin-right: -15px;
+  margin-left: -15px;
   color: #3583B6;
 }
 
